<resources>
  <string name="app_name">Skin Change</string>

  <string name="simple_test_title">Jet Story</string>
  <string name="simple_test_subtitle">Long long ago, there is a small town.</string>
  <string name="simple_test_action_add_view">Add View</string>
  <string name="simple_test_action_toggle_skin">Toggle</string>
  <string name="simple_test_action_toggle_plugin">Toggle Plugin</string>
  <string name="simple_test_action_reset">Reset</string>

  <string name="testcase_simple">Simple Skin Change</string>
  <string name="testcase_plugin">Plugin Skin Change</string>
  <string name="testcase_dynamic">Dynamic Skin Change</string>

</resources>
