<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="12dp"
  android:tag="skin:view_bg:background"
  android:background="@color/view_bg">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/title_text_color"
    android:textSize="24sp"
    android:tag="skin:title_text_color:textColor"
    android:text="@string/simple_test_title"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:textColor="@color/subtitle_text_color"
    android:textSize="16sp"
    android:tag="skin:subtitle_text_color:textColor"
    android:text="@string/simple_test_subtitle"/>

  <Button
    android:id="@+id/button_toggle_skin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginTop="24dp"
    android:text="@string/simple_test_action_toggle_skin"/>

  <Button
    android:id="@+id/button_reset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginTop="4dp"
    android:text="@string/simple_test_action_reset"/>

</LinearLayout>