<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="com.ijoic.skinchange.MainActivity">

  <Button
    android:id="@+id/button_case_simple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/testcase_simple"/>

  <Button
    android:id="@+id/button_case_plugin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/testcase_plugin"/>

  <Button
    android:id="@+id/button_case_dynamic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/testcase_dynamic"/>
</LinearLayout>
